--- a/Client/index.html
+++ b/Client/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./public/assets/icons/Group_2test.png" />
+    <link rel="icon" type="image/svg+xml" href="./public/assets/icons/Group 5LOGO.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>LOFI-BTB</title>
   </head>
   <body>
     <div id="root"></div>
